<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:scrollbarThumbVertical="@android:color/transparent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></RelativeLayout>

        <com.nankai.fpicomsg.customview.FontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="@dimen/spacing_1_8dp"
            android:text="@string/home_title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_4_medium_16sp"
            android:textStyle="bold" />

        <com.nankai.fpicomsg.customview.FontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_1_8dp"
            android:text="@string/home_tile_2"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_2_12sp"
            android:textStyle="bold" />

        <com.nankai.fpicomsg.customview.FontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_1_8dp"
            android:text="@string/home_content"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_2_12sp" />

        <com.nankai.fpicomsg.customview.FontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_1_8dp"
            android:background="@color/colorPrimary"
            android:padding="@dimen/spacing_1_8dp"
            android:text="@string/home_exp"
            android:textColor="@color/white"
            android:textSize="@dimen/text_4_medium_16sp"
            android:textStyle="bold" />

        <com.nankai.fpicomsg.customview.FontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_1_8dp"
            android:text="@string/home_exp_1"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_2_12sp" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_2_16dp"
            android:layout_marginRight="@dimen/spacing_2_16dp"
            android:indeterminateBehavior="cycle"
            android:indeterminateDuration="1"
            android:indeterminateOnly="false"
            android:indeterminateTintMode="screen"
            android:progress="90"
            android:progressDrawable="@drawable/rounded_shape" />

        <com.nankai.fpicomsg.customview.FontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_1_8dp"
            android:text="@string/home_exp_2"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_2_12sp" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_2_16dp"
            android:layout_marginRight="@dimen/spacing_2_16dp"
            android:indeterminateBehavior="cycle"
            android:indeterminateOnly="false"
            android:progress="85"
            android:progressDrawable="@drawable/rounded_shape" />

        <com.nankai.fpicomsg.customview.FontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_1_8dp"
            android:text="@string/home_exp_3"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_2_12sp" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_2_16dp"
            android:layout_marginRight="@dimen/spacing_2_16dp"
            android:indeterminateBehavior="cycle"
            android:indeterminateOnly="false"
            android:progress="80"
            android:progressDrawable="@drawable/rounded_shape" />

        <com.nankai.fpicomsg.customview.FontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_1_8dp"
            android:text="@string/home_exp_4"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_2_12sp" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_2_16dp"
            android:layout_marginRight="@dimen/spacing_2_16dp"
            android:indeterminateBehavior="cycle"
            android:indeterminateOnly="false"
            android:progress="80"
            android:progressDrawable="@drawable/rounded_shape" />

        <com.nankai.fpicomsg.customview.FontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_1_8dp"
            android:text="@string/home_exp_5"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_2_12sp" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_2_16dp"
            android:layout_marginRight="@dimen/spacing_2_16dp"
            android:progress="50"
            android:progressDrawable="@drawable/rounded_shape" />

        <com.nankai.fpicomsg.customview.FontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_1_8dp"
            android:text="@string/home_exp_6"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_2_12sp" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_2_16dp"
            android:layout_marginBottom="@dimen/spacing_2_16dp"
            android:layout_marginRight="@dimen/spacing_2_16dp"
            android:indeterminateBehavior="cycle"
            android:indeterminateOnly="false"
            android:progress="70"
            android:progressDrawable="@drawable/rounded_shape" />
    </LinearLayout>
</ScrollView>